[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://pixilart-drawing.png" type="Texture" id=2]
[ext_resource path="res://Gun 2.tscn" type="PackedScene" id=3]
[ext_resource path="res://MP7.tscn" type="PackedScene" id=4]
[ext_resource path="res://8d82b5_H_K_MP7_Firing_Sound_Effect (1).ogg" type="AudioStream" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 1.5

[sub_resource type="CubeMesh" id=2]

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.740548, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.887114, 0 )

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0209614, 0.0710492, 0.00580627 )

[node name="TextureRect" type="TextureRect" parent="Head/Camera"]
margin_left = 490.533
margin_top = 279.723
margin_right = 530.533
margin_bottom = 319.723
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reach" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -20 )

[node name="AimCast" type="RayCast" parent="Head/Camera"]
transform = Transform( 0.999691, 0, 0.0248509, 0, 1, 0, -0.0248509, 0, 0.999691, 0.62778, -0.313611, -2.51324 )
enabled = true
cast_to = Vector3( 0, 0, -20 )

[node name="GrableCast" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -20 )

[node name="Hand" type="Spatial" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.463307, -0.399655, -0.764764 )

[node name="Gun 2" parent="Head/Hand" instance=ExtResource( 3 )]
transform = Transform( -0.116896, 2.23706e-08, 0.122383, 9.14133e-08, 0.121784, -1.96449e-08, 0.59401, -1.43392e-08, 0.0240837, 0.0012624, 1.19209e-07, -0.0957892 )

[node name="MP7" parent="Head/Hand" instance=ExtResource( 4 )]

[node name="MP7_shot" type="AudioStreamPlayer3D" parent="Head/Hand/MP7"]
transform = Transform( 0.92627, -0.0952, -6.03375, -6.53997, -0.684197, -0.99319, -0.68791, 6.88647, -0.214259, -8.63799, 2.01548, -3.44265 )
stream = ExtResource( 5 )
unit_db = 10.0

[node name="Muzzle" type="MeshInstance" parent="Head/Hand/MP7"]
transform = Transform( 0.327586, 0.0347824, 0.00683298, 0.0412704, 0.08272, 0.000514089, 0.00878893, 0.000557331, 0.0834651, 7.28782, 0.0725355, 0.659671 )
layers = 0
mesh = SubResource( 2 )
material/0 = null

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
